mypy and pylint added to the tox script

--- a/tox.ini
+++ b/tox.ini
@@ -6,11 +6,16 @@ deps =
     pytest < 7
     pytest-html < 4
     pytest-cov < 3
+    mypy
+    pylint
 commands =
     # Generate the wheel
     python setup.py bdist_wheel
     # Run the tests
     pytest --verbose --html=.tox/test_report/report.html --self-contained-html --junitxml .tox/test_report/junit.xml --cov=wallbox --cov-report html:.tox/test_report/coverage.html --cov-report xml:.tox/test_report/coverage.xml
+    # Run mypy
+    mypy wallbox
+    pylint wallbox
 
 [pytest]
 minversion = 6.0
